# rustysolid

./: .gitignore  AGENTS.md  Cargo.toml  DEVELOP.md  LICENSE  README.md  project.conf.template  project.toml.template  stack_notes_seed.sql
.githooks/: pre-commit
admin-gui/: index.html  package-lock.json  package.json  vite.config.ts
admin-gui/src/: App.tsx  main.tsx
backend/: Cargo.toml
backend/authz/: model.conf
backend/migrations/postgres/: V1__auth_core.sql
backend/migrations/sqlite/: V1__auth_core.sql
backend/src/: config.rs  db.rs  main.rs
backend/src/auth/: types.rs
gui/: package-lock.json  package.json  tsconfig.json  vite.config.ts
gui/src/: App.tsx  index.css
gui/src/types/: api.ts
scripts/: check-authz-version-sync.sh  create-user.sh  deploy.sh  init-project.sh  install-git-hooks.sh  setup-server.sh
scripts/configs/: backend.service.template  nginx-temp-cert.conf.template  nginx.conf.template  server.toml
shared-types/: Cargo.toml
shared-types/src/: lib.rs
